# pjatk-pjc-hexagon

./: .clang-tidy  CMakeLists.txt  README.md  cinclude2dot.pl  generate-include-graph.sh
src/: Consts.h  main.cpp
src/FileManagement/: FileManager.cpp  FileManager.h  GameSerializer.cpp  GameSerializer.h
src/Game/: Board.cpp  Board.h  Field.cpp  Field.h  Game.cpp  Game.h  Move.cpp  Move.h  Points.cpp  Points.h  Team.cpp  Team.h  Teams.cpp  Teams.h
src/UI/: ConsoleUI.cpp  ConsoleUI.h  UI.h
